arreglillos, de arraylist a hashmap de las escenas